--- a/index.html
+++ b/index.html
@@ -9,30 +9,31 @@
   <body>
     <div class="container">
       <div class="operating">
-        <textarea name="Operating" id="Operating"></textarea>
+        <textarea name="Operating" id="Operating" class="operating"></textarea>
       </div>
       <div class="buttons">
-        <button class="btn operation">AC</button>
-        <button class="btn operation">DEl</button>
-        <button class="btn operation">%</button>
-        <button class="btn operation">/</button>
+        <button class="operation ac">AC</button>
+        <button class="operation del">DEL</button>
+        <button class="btn operator">%</button>
+        <button class="btn operator">/</button>
         <button class="btn number">7</button>
         <button class="btn number">8</button>
         <button class="btn number">9</button>
-        <button class="btn operation">*</button>
+        <button class="btn operator">*</button>
         <button class="btn number">4</button>
         <button class="btn number">5</button>
         <button class="btn number">6</button>
-        <button class="btn operation">-</button>
+        <button class="btn operator">-</button>
         <button class="btn number">1</button>
         <button class="btn number">2</button>
         <button class="btn number">3</button>
-        <button class="btn operation">+</button>
+        <button class="btn operator">+</button>
         <button class="btn number">0</button>
         <button class="btn number">00</button>
         <button class="btn number">.</button>
-        <button class="btn operation">=</button>
+        <button class="operation">=</button>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
