--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="btn number">0</button>
         <button class="btn number">00</button>
         <button class="btn number">.</button>
-        <button class="operation">=</button>
+        <button class="operation equal">=</button>
       </div>
     </div>
     <script src="index.js"></script>
